[tool.poetry]
name = "k-means"
version = "0.1.0"
description = ""
authors = ["Pavithran ramachandran <pavithran38@pec.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4.0"
jupyterlab = "^4.1.0"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
